<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="aaa.bbb.ccc09.RouletteActivity">
    <ImageView
        android:id="@+id/iv_info"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_info_outline"/>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/roulette"
    android:background="@color/green"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="16dp"
    app:cardCornerRadius="128dp"
    tools:context="aaa.bbb.ccc09.RouletteActivity">
    <ImageView
        android:id="@+id/iv_roulette"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:background="@color/light_green"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/roulette"/>
</android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/tv_type_bid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:text="@string/type_bid"
        android:layout_below="@+id/roulette"/>

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/tv_type_bid"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/rb_one"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:button="@drawable/checkbox_selector"/>
            <RadioButton
                android:id="@+id/rb_two"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:button="@drawable/checkbox_selector"/>
            <RadioButton
                android:id="@+id/rb_three"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:button="@drawable/checkbox_selector"/>
        </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/rg"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/tv_type_bid"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:text="@string/certain_number"/>
            <LinearLayout
                android:id="@+id/ll_et_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/rounded_et">
                <EditText
                    android:id="@+id/et_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:layout_gravity="center_vertical"
                    android:inputType="numberSigned"
                    android:maxLength="2"
                    android:textCursorDrawable="@drawable/color_cursor"/>
            </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:text="@string/color_number"/>
        <LinearLayout
            android:id="@+id/ll_sp_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_et">
            <Spinner
                android:id="@+id/spColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="83dp"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:popupBackground="@drawable/rounded_et"/>
        </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:text="@string/parity_number"/>
        <LinearLayout
            android:id="@+id/ll_sp_parity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_et">
            <Spinner
                android:id="@+id/spParity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="83dp"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:popupBackground="@drawable/rounded_et"/>
    </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_twist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:background="@color/green"
        android:textColor="@color/white"
        android:layout_below="@+id/rg"
        android:layout_marginBottom="16dp"
        android:textAllCaps="false"
        android:text="@string/twist"/>
</RelativeLayout>
</ScrollView>